temporary fix on the modal close button on mobile

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -322,4 +322,8 @@ body {
       .inner-about {
           padding: 20px 30px;
       }
+
+      .close-btn {
+          visibility: hidden;
+      }
   }
